--- a/app/src/main/res/layout/activity_select2.xml
+++ b/app/src/main/res/layout/activity_select2.xml
@@ -141,60 +141,80 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="50dp"
+            android:background="#EFECEC"
             android:layout_weight="7">
 
             <ListView
                 android:id="@+id/lstStation1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="visible" />
+                android:layout_marginTop="10dp"
+                android:visibility="visible"
+                android:drawSelectorOnTop="true"
+                android:listSelector="@android:color/holo_orange_light"/>
 
             <ListView
                 android:id="@+id/lstStation2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="invisible" />
+                android:layout_marginTop="10dp"
+                android:visibility="invisible"
+                android:drawSelectorOnTop="true"
+                android:listSelector="@android:color/holo_orange_light"/>
 
             <ListView
                 android:id="@+id/lstStation3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="invisible" />
+                android:layout_marginTop="10dp"
+                android:visibility="invisible"
+                android:drawSelectorOnTop="true"
+                android:listSelector="@android:color/holo_orange_light"/>
 
             <ListView
                 android:id="@+id/lstStation4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                android:drawSelectorOnTop="true"
+                android:listSelector="@android:color/holo_orange_light"/>
 
             <ListView
                 android:id="@+id/lstStation5"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                android:drawSelectorOnTop="true"
+                android:listSelector="@android:color/holo_orange_light"/>
 
             <ListView
                 android:id="@+id/lstStation6"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                android:drawSelectorOnTop="true"
+                android:listSelector="@android:color/holo_orange_light"/>
 
             <ListView
                 android:id="@+id/lstStation7"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                android:drawSelectorOnTop="true"
+                android:listSelector="@android:color/holo_orange_light"/>
 
             <ListView
                 android:id="@+id/lstStation8"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                android:drawSelectorOnTop="true"
+                android:listSelector="@android:color/holo_orange_light"/>
         </FrameLayout>
 
     </LinearLayout>
