--- a/app/src/main/res/layout/view_station.xml
+++ b/app/src/main/res/layout/view_station.xml
@@ -9,7 +9,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#EFECEC"
         android:orientation="horizontal">
 
         <ImageView
@@ -17,7 +16,7 @@
             android:layout_width="42dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:src="@drawable/img_seoul" />
 
         <TextView
