--- a/app/src/main/res/layout/activity_five_road.xml
+++ b/app/src/main/res/layout/activity_five_road.xml
@@ -8,6 +8,7 @@
     tools:context=".FiveRoadActivity">
 
     <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -15,23 +16,26 @@
         app:tabIndicatorGravity="bottom">
 
         <android.support.design.widget.TabItem
+            android:id="@+id/tabTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="최단 시간" />
 
         <android.support.design.widget.TabItem
+            android:id="@+id/tabCon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="최소 혼잡" />
 
         <android.support.design.widget.TabItem
+            android:id="@+id/tabTrans"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="최소 환승" />
     </android.support.design.widget.TabLayout>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/Pager"
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </LinearLayout>
