--- a/app/src/main/res/layout/activity_station_map.xml
+++ b/app/src/main/res/layout/activity_station_map.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imgMap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/station_map" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnfabL"
