--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -290,12 +290,12 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="60dp"
-        app:backgroundTint="@android:color/background_light"
+        app:backgroundTint="#4a4040"
         app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/floating_station" />
+        app:srcCompat="@drawable/floating_station2" />
 
 
 </android.support.design.widget.CoordinatorLayout>
