--- a/app/src/main/res/layout/activity_select2.xml
+++ b/app/src/main/res/layout/activity_select2.xml
@@ -150,8 +150,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginTop="10dp"
                 android:visibility="visible"
-                android:drawSelectorOnTop="true"
-                android:listSelector="@android:color/holo_orange_light"/>
+                android:listSelector="@drawable/list_selected"
+                android:drawSelectorOnTop="true"/>
 
             <ListView
                 android:id="@+id/lstStation2"
@@ -160,7 +160,7 @@
                 android:layout_marginTop="10dp"
                 android:visibility="invisible"
                 android:drawSelectorOnTop="true"
-                android:listSelector="@android:color/holo_orange_light"/>
+                android:listSelector="@drawable/list_selected"/>
 
             <ListView
                 android:id="@+id/lstStation3"
@@ -169,7 +169,7 @@
                 android:layout_marginTop="10dp"
                 android:visibility="invisible"
                 android:drawSelectorOnTop="true"
-                android:listSelector="@android:color/holo_orange_light"/>
+                android:listSelector="@drawable/list_selected"/>
 
             <ListView
                 android:id="@+id/lstStation4"
@@ -178,7 +178,7 @@
                 android:layout_marginTop="10dp"
                 android:visibility="invisible"
                 android:drawSelectorOnTop="true"
-                android:listSelector="@android:color/holo_orange_light"/>
+                android:listSelector="@drawable/list_selected"/>
 
             <ListView
                 android:id="@+id/lstStation5"
@@ -187,7 +187,7 @@
                 android:layout_marginTop="10dp"
                 android:visibility="invisible"
                 android:drawSelectorOnTop="true"
-                android:listSelector="@android:color/holo_orange_light"/>
+                android:listSelector="@drawable/list_selected"/>
 
             <ListView
                 android:id="@+id/lstStation6"
@@ -196,7 +196,7 @@
                 android:layout_marginTop="10dp"
                 android:visibility="invisible"
                 android:drawSelectorOnTop="true"
-                android:listSelector="@android:color/holo_orange_light"/>
+                android:listSelector="@drawable/list_selected"/>
 
             <ListView
                 android:id="@+id/lstStation7"
@@ -205,7 +205,7 @@
                 android:layout_marginTop="10dp"
                 android:visibility="invisible"
                 android:drawSelectorOnTop="true"
-                android:listSelector="@android:color/holo_orange_light"/>
+                android:listSelector="@drawable/list_selected"/>
 
             <ListView
                 android:id="@+id/lstStation8"
@@ -214,7 +214,7 @@
                 android:layout_marginTop="10dp"
                 android:visibility="invisible"
                 android:drawSelectorOnTop="true"
-                android:listSelector="@android:color/holo_orange_light"/>
+                android:listSelector="@drawable/list_selected"/>
         </FrameLayout>
 
     </LinearLayout>
@@ -239,12 +239,12 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="60dp"
-        app:backgroundTint="@android:color/background_light"
+        app:backgroundTint="#4a4040"
         app:fabSize="mini"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/floating_station" />
+        app:srcCompat="@drawable/floating_station2" />
 
 
 </android.support.design.widget.CoordinatorLayout>
