--- a/app/src/main/res/layout/activity_station_map.xml
+++ b/app/src/main/res/layout/activity_station_map.xml
@@ -21,12 +21,12 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="10dp"
         android:clickable="true"
-        app:backgroundTint="@android:color/background_light"
-        app:fabSize="mini"
+        app:backgroundTint="#ffa352"
+        app:fabSize="normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/floating_list"
+        app:srcCompat="@drawable/floating_list2"
         tools:layout_editor_absoluteX="345dp"
         tools:layout_editor_absoluteY="769dp" />
 </android.support.design.widget.CoordinatorLayout>
