--- a/app/src/main/res/layout/activity_congestion.xml
+++ b/app/src/main/res/layout/activity_congestion.xml
@@ -123,15 +123,15 @@
 
 
             <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_marginTop="80dp"
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="60dp"
-                android:layout_height="wrap_content"
                 android:id="@+id/recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="503dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="80dp"
+                android:layout_marginRight="60dp"
+                android:layout_weight="1"
                 android:scrollbars="vertical"
-                android:layout_weight="1">
-            </android.support.v7.widget.RecyclerView>
+                android:layout_marginBottom="60dp"></android.support.v7.widget.RecyclerView>
 
         </LinearLayout>
     </SlidingDrawer>
