--- a/app/src/main/res/layout/activity_select.xml
+++ b/app/src/main/res/layout/activity_select.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -8,7 +8,8 @@
     android:background="@android:color/background_light"
     android:orientation="vertical"
     android:padding="5dp"
-    tools:context=".SelectActivity">
+    tools:context=".SelectActivity"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -298,4 +299,4 @@
         app:srcCompat="@drawable/floating_station2" />
 
 
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
