--- a/app/src/main/res/layout/activity_select2.xml
+++ b/app/src/main/res/layout/activity_select2.xml
@@ -8,7 +8,8 @@
     android:background="@android:color/background_light"
     android:orientation="vertical"
     android:padding="5dp"
-    tools:context=".Select2Activity">
+    tools:context=".Select2Activity"
+    android:descendantFocusability="blocksDescendants">
 
     <LinearLayout
         android:layout_width="match_parent"
