--- a/app/src/main/res/layout/view_road2.xml
+++ b/app/src/main/res/layout/view_road2.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:orientation="horizontal"
         android:background="#FF5555"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:gravity="center">
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -19,12 +19,20 @@
 
             <ImageView
                 android:id="@+id/bar01"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="-20dp"
                 android:layout_marginTop="30dp"
                 android:layout_toRightOf="@+id/circle01"
-                app:srcCompat="@drawable/rectangle" />
+                app:srcCompat="@drawable/rectangle90" />
+            <ImageView
+                android:id="@+id/bar02"
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="-20dp"
+                android:layout_marginTop="30dp"
+                android:layout_toRightOf="@+id/circle02"
+                app:srcCompat="@drawable/rectangle90" />
 
             <ImageView
                 android:id="@+id/circle01"
@@ -32,7 +40,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="15dp"
-                app:srcCompat="@drawable/circle" />
+                app:srcCompat="@drawable/circle"
+                />
 
             <ImageView
                 android:id="@+id/circle02"
@@ -41,6 +50,15 @@
                 android:layout_marginLeft="-20dp"
                 android:layout_marginTop="15dp"
                 android:layout_toRightOf="@+id/bar01"
+                app:srcCompat="@drawable/circle" />
+
+            <ImageView
+                android:id="@+id/circle03"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="-20dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/bar02"
                 app:srcCompat="@drawable/circle" />
 
             <TextView
@@ -59,6 +77,15 @@
                 android:layout_marginTop="39dp"
                 android:layout_toRightOf="@id/bar01"
                 android:text="태릉입구" />
+
+            <TextView
+                android:id="@+id/txtStation3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="39dp"
+                android:layout_toRightOf="@id/bar02"
+                android:text="석계" />
         </RelativeLayout>
 
         <TextView
@@ -71,5 +98,4 @@
             android:textColor="@color/white"
             android:textSize="30dp" />
     </LinearLayout>
-
 </LinearLayout>
