--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,13 +50,13 @@
 
                     <ImageButton
                         android:id="@+id/settingBtn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
                         android:layout_gravity="center|right"
                         android:layout_weight="0"
                         android:background="@android:color/transparent"
-                        android:paddingRight="20dp"
-                        app:srcCompat="@drawable/setting" />
+                        android:paddingRight="50dp"
+                        app:srcCompat="@drawable/feedback" />
                 </FrameLayout>
 
             </LinearLayout>
