--- a/app/src/main/res/layout/activity_pop_up.xml
+++ b/app/src/main/res/layout/activity_pop_up.xml
@@ -18,33 +18,43 @@
             android:layout_height="40dp"
             android:gravity="center"
             android:layout_gravity="center"
-            android:text="사용자와 함께 똑똑해지는 허니웨이" />
+            android:id="@+id/txt" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/radioG">
         <RadioButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="모두가 여유롭게 앉아있어요"/>
+        android:text="모두가 여유롭게 앉아있어요"
+            android:id="@+id/radio1"/>
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="대부분의 승객이 앉아있어요"/>
+            android:text="대부분의 승객이 앉아있어요"
+            android:id="@+id/radio2"/>
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="서 있는 승객 수와 자리 개수가 비슷해요"/>
+            android:text="서 있는 승객 수와 자리 개수가 비슷해요"
+            android:id="@+id/radio3"/>
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="사람이 많아 서 있는 승객 중 손잡이를 못 잡은 사람이 있어요"/>
+            android:text="사람이 많아 서 있는 승객 중 손잡이를 못 잡은 사람이 있어요"
+            android:id="@+id/radio4"/>
         <RadioButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="너무 혼잡해서 내리기 힘들어요"/>
+            android:text="너무 혼잡해서 내리기 힘들어요"
+            android:id="@+id/radio5"/>
+        </RadioGroup>
     </LinearLayout>
 
     <View
@@ -58,19 +68,21 @@
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_weight="1">
+
         <Button
+            android:id="@+id/submit"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:text="submit"
+            android:layout_height="35dp"
             android:layout_weight="0.5"
-            android:id="@+id/submit"/>
+            android:gravity="center"
+            android:text="submit" />
+
         <Button
+            android:id="@+id/close"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:gravity="center"
-            android:text="close"
+            android:layout_height="35dp"
             android:layout_weight="0.5"
-            android:id="@+id/close"/>
+            android:gravity="center"
+            android:text="close" />
     </LinearLayout>
 </LinearLayout>
