--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,12 +68,22 @@
                 android:layout_marginBottom="30dp"
                 android:layout_weight="0"
                 android:orientation="vertical">
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="0dp"
+                    android:fontFamily="@font/kopub_dotum_bold"
+                    android:text="10 : 00"
+                    android:textColor="@android:color/background_light"
+                    android:textSize="0sp" />
 
                 <FrameLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_gravity="center"
-                    android:layout_marginTop="100dp"
+                    android:layout_marginTop="60dp"
                     android:paddingLeft="10dp">
 
                     <ImageView
