--- a/app/src/main/res/layout/view_road.xml
+++ b/app/src/main/res/layout/view_road.xml
@@ -6,9 +6,10 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/conLayout2"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:background="#FF5555"
+        android:background="#00000000"
         android:gravity="center"
         android:orientation="horizontal">
 
