--- a/app/src/main/res/layout/view_road2.xml
+++ b/app/src/main/res/layout/view_road2.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:orientation="horizontal"
-        android:background="#FF5555"
+        android:background="#00000000"
         android:gravity="center">
 
         <RelativeLayout
