--- a/app/src/main/res/layout/view_road4.xml
+++ b/app/src/main/res/layout/view_road4.xml
@@ -6,11 +6,12 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/conLayout4"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:orientation="horizontal"
-        android:background="#FF5555"
-        android:gravity="center">
+        android:background="#00000000"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <RelativeLayout
             android:layout_width="0dp"
